--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,10 @@
 .idea
 venv
+__pycache__
+Resources/Temporary_files
 *.ini
 *.txt
-*.txt
-*.txt
-*.txt
-*.txt
-*.txt
-*.pyc
-*.xml
-*.txt
 Resources/Temporary_files/Current_Network.txt
-Resources/Temporary_files/Saved_Network.txt
+Resources/Temporary_files/IP.txt
+Resources/Temporary_files/Current_Network.txt
+Resources/Temporary_files/IP_TO_SEND.txt
