--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Resources/Temporary_files/IP.txt
 Resources/Temporary_files/Current_Network.txt
 Resources/Temporary_files/IP_TO_SEND.txt
 Resources/Temporary_files/Current_Network.txt
+Resources/Temporary_files/Current_Network.txt
