--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,13 +3,11 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "Python: Current File",
-            "type": "python",
-            "request": "launch",
-            "program": "${file}",
-            "console": "integratedTerminal"
-        }
-    ]
+    "configurations": [{
+        "name": "Python: Main.py",
+        "type": "python",
+        "request": "launch",
+        "program": "C:\\Users\\adam-pc\\Documents\\GitHub\\client\\Main.py",
+        "console": "integratedTerminal"
+    }]
 }
